--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "concurrently": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.28.0",
     "react-scripts": "4.0.3",
+    "react-virtuoso": "^2.2.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run dev\" \"npm run start:server\"",
+    "start:server": "json-server src/crate.json --port 3001",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
