--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "concurrently": "^6.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,9 +13,19 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.15"
+  },
   "scripts": {
     "start": "concurrently \"npm run dev\" \"npm run start:server\"",
-    "start:server": "json-server src/crate.json --port 3001",
+    "start:server": "json-server src/crate-minimal.json --port 3001",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
