--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^3.1.0",
+    "@mantine/hooks": "^3.1.0",
     "concurrently": "^6.3.0",
+    "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.7.2",
     "react-query": "^3.28.0",
     "react-scripts": "4.0.3",
     "react-virtuoso": "^2.2.3",
