--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-h5-audio-player": "^3.7.2",
     "react-query": "^3.28.0",
     "react-scripts": "4.0.3",
+    "react-selection-hooks": "^0.1.2",
     "react-virtuoso": "^2.2.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
