--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mantine/core": "^3.1.0",
     "@mantine/hooks": "^3.1.0",
+    "@reecelucas/react-use-hotkeys": "^1.3.1",
     "concurrently": "^6.3.0",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
