--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-query": "^3.28.0",
     "react-scripts": "4.0.3",
     "react-selection-hooks": "^0.1.2",
+    "react-transition-group": "^4.4.2",
     "react-virtuoso": "^2.2.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
@@ -27,6 +28,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.15",
     "json-server": "^0.17.0",
     "prettier": "2.4.1"
