--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^3.1.0",
-    "@mantine/hooks": "^3.1.0",
+    "@mantine/core": "^3.1.4",
+    "@mantine/hooks": "^3.1.4",
+    "@mantine/notifications": "^3.1.4",
     "@reecelucas/react-use-hotkeys": "^1.3.1",
     "concurrently": "^6.3.0",
     "phosphor-react": "^1.3.1",
