--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run dev\" \"npm run start:track-server\" \"npm run start:db-server\"",
-    "start:track-server": "json-server src/db/crate-minimal.json --port 3001",
+    "start:track-server": "json-server src/db/crate.json --port 3001",
     "start:db-server": "json-server src/db/db.json --port 3002",
     "dev": "react-scripts start",
     "build": "react-scripts build",
